--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
+    "@svg-maps/india": "^1.0.0",
+    "@svg-maps/taiwan": "^1.1.0",
     "chart.js": "^2.9.3",
     "nuxt": "^2.0.0",
     "vue-chartjs": "^3.5.0",
-    "vue-d3-charts": "^0.2.8"
+    "vue-d3-charts": "^0.2.8",
+    "vue-svg-map": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0"
